--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,13 +29,13 @@ input:focus {
     border: solid 5px #00FFCE;
 }
 
-#greet {
+#mulai {
     background-color: PaleVioletRed;
     border:  none;
     width:  200px;
     color: white;
 }
 
-#greet:hover {
+#mulai:hover {
     background-color: MediumVioletRed;
 }
